contextmenu arreglado, cargar ontologia a traves de archivos arreglado